networkpolicy_pod_with_lables_accept_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy2
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: test
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
